# Colori-iris

./: LICENSE  README.md  index.html  package-lock.json  package.json
src/: App.css  App.jsx  CropOverlay.jsx  MyComponents.jsx  MyWindows.jsx  RefPanel.jsx  SettingsPanel.jsx  colorLogic.js  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: d3d11_renderer.rs  lib.rs  main.rs  wgc.rs
src/hooks/: useColorSync.js  useTauriBackend.js
